Test_files/invalidTestCases/fail_print.avm
push int32(1000)
print
exit